--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,3 +1,11 @@
 <div>
-    
+    <p>
+        <%= event.title %>
+    </p>
+    <p>
+        <%= event.title %>
+    </p>
+    <p>
+        <%= event.title %>
+    </p>
 </div>
