add devise user

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -3,9 +3,12 @@
         <%= event.title %>
     </p>
     <p>
-        <%= event.title %>
+        <%= event.location %>
     </p>
     <p>
-        <%= event.title %>
+        <%= event.description %>
+    </p>
+    <p>
+        <%= event.event_date_time %>
     </p>
 </div>
