fix event create controller spec to post to correct url.

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,2 +1,15 @@
-<h1>Events#new</h1>
-<p>Find me in app/views/events/new.html.erb</p>
+<%= form_with model: @event do |form| %>
+    <%= form.label :title, "Title" %>
+    <%= form.text_field :title%>
+    <br>
+    <%= form.label :location, "Location" %>
+    <%= form.text_field :location %>
+    <br>
+    <%= form.label :description, "Description" %>
+    <%= form.text_area :description %>
+    <br>
+    <%= form.label :event_date_time, "Date and Time of the Event" %>
+    <%= form.datetime_select :event_date_time %>
+    <br>
+    <%= form.submit "Create Event"%>
+<% end %>
