--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <%= button_to "Logout", destroy_user_session_path, method: :delete%>
+    <%= button_to "Login", new_user_session_path, method: :get%>
     <%= yield %>
   </body>
 </html>
