--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,11 @@
 <h2>
     <%= @event.title %>
 </h2>
+
+<ul>
+    <% @event.attenders.each do |attender|%>
+        <li><%= attender.first_name %></li>
+    <% end %>
+</ul>
+
+<%= render partial: "join" %>
