--- a/app/views/events/_join.html.erb
+++ b/app/views/events/_join.html.erb
@@ -1,2 +1,6 @@
 <%= button_to "Attend Event", attendees_path, params: {event_id: @event.id} ,:method => :post%>
 
+<% if @event.creator_id == current_user.id %>
+    <%= button_to "Delete Event", event_path(@event.id), :method => :delete%>
+<% end %>
+
