--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
     <%= button_to "Logout", destroy_user_session_path, method: :delete%>
     <%= button_to "Login", new_user_session_path, method: :get%>
+    <%= current_user.id%>
     <%= yield %>
   </body>
 </html>
