--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html class="dark">
   <head>
     <title>PrivateEvents</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <%= button_to "Logout", destroy_user_session_path, method: :delete%>
-    <%= button_to "Login", new_user_session_path, method: :get%>
-    <%= current_user.id%>
+  <body class="bg-orange-50 dark:bg-slate-800 text-zinc-100 ">
+    <%= render "layouts/navbar" %>
     <%= yield %>
   </body>
 </html>
