--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="dark">
+<html>
   <head>
     <title>PrivateEvents</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,7 +11,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-orange-50 dark:bg-slate-800 text-zinc-100 ">
+  <body class="bg-blue-100 dark:bg-slate-800 text-zinc-100 ">
     <%= render "layouts/navbar" %>
     <%= yield %>
   </body>
