--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,5 @@
-<% @events.each do |event|%>
-    <%= render event%>
-<% end %>
+<div class="  mx-auto w-fit m-4 md:grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-10" >
+    <% @events.each do |event|%>
+        <%= render event%>
+    <% end %>
+</div>
