--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,11 @@
-<div class="text-black bg-slate-400 dark:bg-zinc-100 m-2">   
+
+
+<div class="text-black bg-slate-400 dark:bg-zinc-100 m-2">
+    <div class="">
+        <% if flash[:error] %>
+            <p class=" bg-red-200 w-96 mx-auto p-6 text-red-600"><%= flash[:error] %></p>
+        <% end %>
+    </div>
     <div class="p-4">
         <h2 class="text-2xl font-bold">
             <%= @event.title %>
@@ -43,6 +50,6 @@
         </div>
         
 
-    <%= render partial: "join" %>
+    <%= render partial: "join",  locals: {event: @event}%>
     </div>
 </div>
