--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,3 +1,5 @@
+
+<%= turbo_frame_tag "new_event" do %>
 <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -9,4 +11,6 @@
       </ul>
     </div>
   <% end %>
-<%= render partial: "form", locals: {event: @event}%>
+  <%= render partial: "form", locals: {event: @event}%>
+  <%= link_to "Nevermind", events_path, class:" text-black" %>
+<% end %>
