add link to event card on creators first name that takes you to the creators profile

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -20,7 +20,7 @@
             When? <%= event.event_date_time.strftime("%m/%d/%Y @ %I:%M%P") %>
         </p>
         <p>
-            Hosted By: <%= event.creator.first_name%>
+            Hosted By: <%= link_to event.creator.first_name, user_path(event.creator.id), class: "hover:text-sky-300"%>
         </p>
         <div class="my-2">
             <% if event.attenders.find_by(id: current_user.id) %>
