--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,16 +1,6 @@
 
 <%= turbo_frame_tag "new_event" do %>
-<% if @event.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
-
-      <ul>
-      <% @event.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= render partial: "shared/error_messages", locals: {object: @event} %>
   <%= render partial: "form", locals: {event: @event}%>
   <%= link_to "Nevermind", events_path, class:" text-black" %>
 <% end %>
