--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="text-black my-8 bg-white w-80 h-fit rounded-3xl">
-    <%= image_tag("card-default.jpg", class: "rounded w-72 mx-auto my-0 mt-4")%>
+    <%= image_tag("card-default.jpg", class: "rounded w-72 mx-auto my-0 mt-4 pt-2")%>
     <div class="px-4">
         <h3 class="text-2xl font-bold">
             <%= event.title %>
