--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,1 +1,4 @@
-<%= render partial: "form", locals: {event: @event}%>
+<%= turbo_frame_tag @event do %>
+    <%= render partial: "form", locals: {event: @event}%>
+    
+<% end %>
